--- a/src/style.css
+++ b/src/style.css
@@ -14,3 +14,68 @@
   position: absolute;
   width: 40px;
 }
+
+#boss{
+  height: 70px;
+  position: absolute;
+  width: 90px;
+}
+
+#box1 {
+  /* background-color: white; */
+  height: 100px;
+  position: absolute;
+  width: 100px;
+  left: 150px;
+  bottom: 325px;
+}
+
+#box2 {
+  /* background-color: white; */
+  height: 100px;
+  position: absolute;
+  width: 100px;
+  left: 300px;
+  bottom: 325px;
+}
+
+#box3 {
+  /* background-color: white; */
+  height: 100px;
+  position: absolute;
+  width: 100px;
+  left: 450px;
+  bottom: 325px;
+}
+
+
+.bullet {
+  /* width: 20px;
+  height: 20px; */
+  /* background: tan; */
+  position: absolute;
+}
+
+/* .bullet:before {
+  content: "";
+  border-bottom: 6px solid tan;
+  border-left: 6px solid #111;
+  border-right: 6px solid #111;
+  height: 0;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 9px;
+}
+
+.bullet:after {
+  content: "";
+  border-left: 6px solid #111;
+  border-right: 6px solid #111;
+  border-top: 6px solid tan;
+  bottom: 0;
+  height: 0;
+  left: 0;
+  position: absolute;
+  width: 9px;
+} */
