--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,7 @@
 #boss{
   height: 70px;
   position: absolute;
-  width: 90px;
+  width:  90px;
 }
 
 #box1 {
@@ -50,6 +50,13 @@
 
 
 .bullet {
+  /* width: 20px;
+  height: 20px; */
+  /* background: tan; */
+  position: absolute;
+}
+
+.bossBullet {
   /* width: 20px;
   height: 20px; */
   /* background: tan; */
